changed job title

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         </h1>
 
         <h2 class="sm-heading">
-            Full Stack Developer, Software Engineer
+            Software Developer
         </h2>
 
         <div class="icons">
