--- a/about.html
+++ b/about.html
@@ -56,8 +56,8 @@
         <div class="bio">
           <h3 class="text-secondary">About</h3>
           <p>
-            I am a Full stack web developer. I am from West Bengal. I am a
-            passionate programmer. I write modern, clean, efficient code.
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus
+            ipsum doloribus natus eaoptio architecto vero in!
           </p>
         </div>
 
