--- a/contact.html
+++ b/contact.html
@@ -56,7 +56,7 @@
                 <a href="mailto:tousif@protonmail.com">
                     <span class="text-secondary">Email:</span>
                 </a>
-                tousif@protonmail.com
+                tousif101@zohomail.com
             </div>
             <div>
                 <a href="https://www.linkedin.com/in/tousif-i-21823a16a" target="_new">
