--- a/about.html
+++ b/about.html
@@ -65,8 +65,9 @@
           <h3>Full Stack Web Developer</h3>
           <h5>XYZ Inc.</h5>
           <p>
-            Worked on multiple personal projects that includes JavaScript, HTML,
-            CSS, Node.JS, React.JS.
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus
+            ipsum doloribus natus eaoptio architecto vero in! Obcaecati,
+            recusandae voluptate.
           </p>
         </div>
         <div class="job job-2">
