--- a/index.html
+++ b/index.html
@@ -53,13 +53,13 @@
         </h2>
 
         <div class="icons">
-            <a href="https://www.linkedin.com/in/tousif-i-21823a16a" target="_new">
+            <a href="https://www.linkedin.com/in/tousif-linked" target="_new">
                 <i class="fab fa-linkedin fa-2x"></i>
             </a>
             <a href="https://github.com/CoderTousif" target="_new">
                 <i class="fab fa-github fa-2x"></i>
             </a>
-            <a href="mailto:tousif@protonmail.com">
+            <a href="mailto:tousif101@outlook.com">
                 <i class="fas fa-at fa-2x"></i>
             </a>
         </div>
