--- a/contact.html
+++ b/contact.html
@@ -53,13 +53,13 @@
 
         <div class="boxes">
             <div>
-                <a href="mailto:tousif@protonmail.com">
+                <a href="mailto:tousif101@outlook.com">
                     <span class="text-secondary">Email:</span>
                 </a>
                 tousif101@zohomail.com
             </div>
             <div>
-                <a href="https://www.linkedin.com/in/tousif-i-21823a16a" target="_new">
+                <a href="https://www.linkedin.com/in/tousif-linked" target="_new">
                     <span class="text-secondary">LinkedIn:</span>
                 </a>
                 Tousif Islam
