--- a/contact.html
+++ b/contact.html
@@ -56,7 +56,7 @@
                 <a href="mailto:tousif101@outlook.com">
                     <span class="text-secondary">Email:</span>
                 </a>
-                tousif101@zohomail.com
+                tousif101@outlook.com
             </div>
             <div>
                 <a href="https://www.linkedin.com/in/tousif-linked" target="_new">
